using System;
using System.Collections;
using System.Collections.Generic;
using System.Linq;


internal class AnimationStrings
{
    internal static string isMoving = "isMoving"; // Animation parameter for player movementjjk
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded"; 
    internal static string yVelocity = "yVelocity"; // Animation parameter for vertical velocity
    internal static string jumpTrigger = "jump";
    internal static string isOnWall = "isOnWall"; 
    internal static string isOnCeiling = "isOnCeiling";
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
}